[tool.poetry]
name = "alex_leontiev_toolbox_python"
version = "0.1.0"
description = ""
authors = ["Oleksii Leontiev <alozz1991@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
